                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.4
  *) [TS-1178] cop will kill manager & server, even cop it self, in cluster.

  *) [TS-1156] Fix timestamp log fields, and stop supporting network byte
   order in various log buffers. See TS-1182 for future enhancements.

  *) [TS-1017] Update logging to be IPv6 compliant, including collation.

  *) [TS-1080] If we run out of Log Buffer slots, we assert.

  *) [TS-1176] Eliminates the need for a delayed "delete" of log buffers.
   This was a serious race condition, which was previously sold by delaying
   deletes via a ring buffer.

  *) [TS-1036] Improve some squid log compatiblity. Suggestions from mnot.

  *) [TS-1092] Remove specific SSL termination mode, we either terminate, or
    we do not.

  *) [TS-1173] Improve the comments in remap.config.

  *) [TS-981] Remove the support for libev (for now at least).

  *) [TS-1172] Remove remap/StringHash.{cc,h}, they are not used.

  *) [TS-1171] http_ui cache lookup, double free.

  *) [TS-1168] Change UrlRewrite::BuildTable to be IPv6 compliant.

  *) [TS-1167] Updates parent socks server setup to be IPv6 compliant.

  *) [TS-1166] Remove proxy/Stuffer.[cc,h] because they were unused.

  *) [TS-1162] UnixNetVConnection assertion when accepting a TLS connection

  *) [TS-1135] support wildcard certificates for ServerNameIndication (SNI)

  *) [TS-1140] Combine IP Allow and QuickFilter.

  *) [TS-1159] Add compiler hints to debug logging

  *) [TS-1143] Fixed edge case problems in IpMap.

  *) [TS-1114] Fix to lock vol for CacheVC::write_vector.

  *) [TS-857] Possibly related race in UnixNetVConnection::mainEvent
              on inactivity timeout.

  *) [TS-1149] Pretty up automake output.


Changes with Apache Traffic Server 3.1.3
  *) [TS-1145] Additional clang build fixes. Author: Darrin Jewell.

  *) [TS-1144] Fix out of tree builds. Author: Darrin Jewell.
